--- a/styles/index.css
+++ b/styles/index.css
@@ -1,20 +1,104 @@
-body {
-    background-color:rgba(66, 66, 66, 0.507);
+html, body {
+    padding: 0;
+    width: 100%;
 }
 #title {
     position: absolute;
-    top:28.5%;
+    top:35%;
     padding-left: max(5%);
+    font-size: 4.50em;
+    color: white;
+    font-family: "Lato", sans-serif;
 }
-#register-button-index {
-    position:absolute;
-    top:70%;
-    left:88%;
-}
-#button-collapsible-Navbar {
-    position: absolute;
-    left:80%;
+#collapsibleNavbar {
+    width: 100%;
 }
 #navbar-index {
     width: 100%;
+}
+button {
+    position: absolute;
+}
+#login {
+    top: 65%;
+    left:80%;
+}
+#login_page-index {
+    position: absolute;
+    top: 90%;
+    left: 52%;
+    font: 14px;
+    color: black;
+    font-family: "Lato", sans-serif;
+}
+#user {
+    position: absolute;
+    top: 45%;
+    left: 65%;
+    width: 310px;
+    height: 40px;
+    border-radius: 10px;
+}
+#senha {
+    position: absolute;
+    top: 55%;
+    left: 65%;
+    border-radius: 10px;
+    width: 310px;
+    height: 40px;
+}
+.sidenav {
+    position: absolute;
+    height: 100%;
+    width: 50%;
+    background-color: #000;
+}
+button {
+    background: none;
+    color: #ccc;
+    width: 100px;
+    height: 40px;
+    border: 1px solid #000000;
+    font-size: 14px;
+    border-radius: 4px;
+    transition: .6s;
+    overflow: hidden;
+    font-family: "Lato", sans-serif;
+}
+button:fucus {
+    content: '';
+    display: block;
+    position: absolute;
+    background: rgba(255,255,255,.5);
+    width: 60px;
+    height: 100%;
+    left: 0;
+    top: 0;
+    opacity: .5s;
+    filter: blur(30px);
+    transform: translateX(-130px) skewX(-15deg);
+}
+button::after {
+    content: '';
+    display: block;
+    position: absolute;
+    background: rgba(255,255,255,.2);
+    width: 30px;
+    height: 100%;
+    left: 30px;
+    top: 0;
+    opacity: 0;
+    filter: blur(30px);
+    transform: translateX(-100px) scaleX(-15deg);
+}
+
+button:hover {
+    background: #000000;
+    cursor: pointer;
+}
+
+button:hover:beforce {
+    transform: translateX(300px) skewX(-15deg);
+    opacity: 1;
+    transition: .7s;
 }
